--- a/asset/source/style.scss
+++ b/asset/source/style.scss
@@ -201,18 +201,18 @@ margin: 30px;
  }
 }
 
-.container6{
-    justify-content: center;
-    display: flex;
-    align-items:center;
-    text-align: center;
-    height: 30vh;
-    background-size: cover;
-    background-image: url(../../asset/media.jpg);
-   padding: 20px;
-   .overflow{
-    background-color: rgb(10, 7, 7);
-    width:100%;
+// .container6{
+//     justify-content: center;
+//     display: flex;
+//     align-items:center;
+//     text-align: center;
+//     height: 30vh;
+//     background-size: cover;
+//     background-image: url(../../asset/media.jpg);
+//    padding: 20px;
+//    .overflow{
+//     background-color: rgb(10, 7, 7);
+//     width:100%;
     
-}
-}
+// }
+// }
